--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ https://templatemo.com/tm-588-ebook-landing
                 <div class="container">
                     <a class="navbar-brand" href="index.html">
                         <i class="navbar-brand-icon bi-book me-2"></i>
-                        <span>BY :  Ahmad DZAKI Prakosa</span>
+                        <span>BY : Ahmad DZAKI Prakosa</span>
                     </a>
 
                     <div class="d-lg-none ms-auto me-3">
@@ -97,7 +97,7 @@ https://templatemo.com/tm-588-ebook-landing
                         </div>
 
                         <div class="hero-image-wrap col-lg-6 col-12 mt-3 mt-lg-0">
-                            <img src="images/9.JPG" class="hero-image img-fluid" alt="education online books">
+                            <img src="images/9.jpg" class="hero-image img-fluid" alt="education online books">
                         </div>
 
                     </div>
@@ -158,7 +158,7 @@ https://templatemo.com/tm-588-ebook-landing
 
                                 <p> <a rel="nofollow" href="https://freepik.com" target="_blank"></a>Masjid Agung Demak merupakan Masjid tertua di Pulau Jawa, didirikan Wali Sembilan atau Wali Songo. Lokasi Masjid berada di pusat kota Demak, berjarak ± 26 km dari Kota Semarang, ± 25 km dari Kabupaten Kudus, dan ± 35 km dari Kabupaten Jepara. .</p>
                                 <div class="col-lg-12 mb-3">
-                                            <img src="images/17.JPG" class="scrollspy-example-item-image img-fluid" alt="">
+                                            <img src="images/17.jpg" class="scrollspy-example-item-image img-fluid" alt="">
                                         </div>
                                 <h6>Masjid Demak Bercorak apa</h6>
                                 <p>Masjid ini menjadi tempat agama Islam diajarkan dan menjadi tempat Walisongo berkumpul untuk menyebarkan agama Islam. Merujuk buku berjudul Kota Demak sebagai Bandar Dagang di Jalur Sutra Kemdikbud, Masjid Agung Demak merupakan salah satu peninggalan Kerajaan Demak.</p>
@@ -208,12 +208,12 @@ https://templatemo.com/tm-588-ebook-landing
 
                                     <p>Masjid ini terletak di Kampung Kauman, Kelurahan Bintoro, Kecamatan Demak, Kabupaten Demak, Jawa Tengah. Masjid ini dipercayai pernah menjadi tempat berkumpulnya para ulama (wali) yang menyebarkan agama Islam di tanah Jawa yang disebut dengan Walisongo.</p>
                                     <div class="col-lg-12 mb-3">
-                                            <img src="images/13.JPG" class="scrollspy-example-item-image img-fluid" alt="">
+                                            <img src="images/13.jpg" class="scrollspy-example-item-image img-fluid" alt="">
                                         </div>
                                     <p><strong>sejarah wali songo?</strong>Wali Songo terkenal sebagai penyebar agama Islam pada zaman ke 14 di tanah Jawa. Mereka tinggal di Pantai utara Pulau Jawa, yaitu Jawa Timur, Jawa Tengah, dan Jawa Barat. Mereka berdakwah di Nusantara dengan prosedur mengajak masyarakat bagi masuk agama Islam tanpa paksaan .</p>
 
                                     <div class="col-lg-12 mb-3">
-                                            <img src="images/12.JPG" class="scrollspy-example-item-image img-fluid" alt="">
+                                            <img src="images/12.jpg" class="scrollspy-example-item-image img-fluid" alt="">
                                         </div>
                              <div class="scrollspy-example-item" id="item-2">
                                     <h5>Makam Sunan Kalijaga</h5>
@@ -221,16 +221,16 @@ https://templatemo.com/tm-588-ebook-landing
                                     <p>Wilayah Kadilangu merupakan wilayah yang dihadiahkan khusus kepada Sunan Kalijaga oleh Raden Sultan Fattah sebagai raja Kerajaan Demak. Makam Sunan Kalijaga tidak pernah sepi pengunjung yang ingin ziarah. Mereka datang dari berbagai kota bahkan luar negeri, seperti Malaysia, Brunei Darussalam, dan Singapura.</p>
                                     <p>merupakan salah satu makam dari tokoh penyebar Islam di Pulau Jawa. Makamnya selalu menjadi tujuan wisata religi bagi wisatawan lokal maupun mancanegara.  Sunan Kalijaga atau Susuhunan Kalijaga merupakan seorang tokoh Walisongo. Beliau dikenal sebagai wali yang sangat lekat dengan muslim di Pulau Jawa karena kemampuannya memasukkan pengaruh Islam ke dalam tradisi dan budaya Jawa.</p>
                                      <div class="col-lg-12 mb-3">
-                                            <img src="images/11.JPG" class="scrollspy-example-item-image img-fluid" alt="">
+                                            <img src="images/11.jpg" class="scrollspy-example-item-image img-fluid" alt="">
                                         </div>
 
                                      <h5>Makam Sunan Kalijaga yang asli di mana</h5>
                                      <div class="col-lg-12 mb-3">
-                                            <img src="images/20.JPG" class="scrollspy-example-item-image img-fluid" alt="">
+                                            <img src="images/20.jpg" class="scrollspy-example-item-image img-fluid" alt="">
                                         </div>
                                          <p>Lokasi Makam Sunan Kalijaga berada di alamat Jl. Raden Sahid, Desa Kadilangu, Kecamatan Demak Kabupaten Demak, Provinsi Jawa Tengah.</p>
                                           <div class="col-lg-12 mb-3">
-                                            <img src="images/21.JPG" class="scrollspy-example-item-image img-fluid" alt="">
+                                            <img src="images/21.jpg" class="scrollspy-example-item-image img-fluid" alt="">
                                         </div>
                                     <div class="scrollspy-example-item" id="item-3">
                                       <p>Rute Makam Sunan Kalijaga<p>
@@ -247,7 +247,7 @@ https://templatemo.com/tm-588-ebook-landing
                                        <p>Hari raya Idul Adha beroperasi satu hari mulai dari pukul 08.00 Sd 17.00 Wib.</p>
                                        <p>Selama bulan ramadhan kawasan makam ditutup sementara.</p>
                                        <div class="col-lg-12 mb-3">
-                                            <img src="images/22.JPG" class="scrollspy-example-item-image img-fluid" alt="">
+                                            <img src="images/22.jpg" class="scrollspy-example-item-image img-fluid" alt="">
                                         </div>
                                        <p>Fasilitas Makam Sunan Kalijaga</p>
                                           <p>Fasilitas yang ada di sekitar Makam Sunan Kalijaga diantaranya :</p>
@@ -263,7 +263,7 @@ https://templatemo.com/tm-588-ebook-landing
                                         Keberadaan dari Makam Sunan Kalijaga itu sendiri hingga kini masih menjadi misteri, karena tak bisa masuk ke logika bagaimana mungkin 1 raga memiliki lebih dari satu makam.</p>
                                      <p>Namun yang berada di Kadilangu, Demak, inilah yang senantiasa ramai oleh para peziarah. Juru kunci Makam Sunan Kalijaga melarang pengunjung untuk membawa benda-benda pusaka yang memiliki khodam ke sekitar makam.</p>
                                     <div class="col-lg-12 mb-3">
-                                            <img src="images/23.JPG" class="scrollspy-example-item-image img-fluid" alt="">
+                                            <img src="images/23.jpg" class="scrollspy-example-item-image img-fluid" alt="">
                                         </div>
                                 <p>Selain Makam dari Sunan Kalijaga itu sendiri, di sekitar kawasan ini juga terdapat beberapa makam tokoh lain salah satunya ialah Makam dari Pangeran Haryo    Penangsang.
                                Tempat dari Makam Sunan Kalijaga itu sendiri cukup luas, dan dapat menampung beberapa puluh peziarah dalam satu waktu.
@@ -273,7 +273,7 @@ https://templatemo.com/tm-588-ebook-landing
                                  Gentong Pedaringan yaitu gentong yang dijadikan tempat menyimpan beras.
                                  Pengunjung dapat ngalap berkah dari air gentong tersebut, bisa meminumnya langsung atau dengan memasukkannya ke dalam wadah untuk kemudian dibawa pulang.</p>
                                  <div class="col-lg-12 mb-3">
-                                            <img src="images/24.JPG" class="scrollspy-example-item-image img-fluid" alt="">
+                                            <img src="images/24.jpg" class="scrollspy-example-item-image img-fluid" alt="">
                                         </div>    
                                 </div> 
                                 <div class="scrollspy-example-item" id="item-4">
