--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ https://templatemo.com/tm-588-ebook-landing
                                 <h6>Masjid Demak Bercorak apa</h6>
                                 <p>Masjid ini menjadi tempat agama Islam diajarkan dan menjadi tempat Walisongo berkumpul untuk menyebarkan agama Islam. Merujuk buku berjudul Kota Demak sebagai Bandar Dagang di Jalur Sutra Kemdikbud, Masjid Agung Demak merupakan salah satu peninggalan Kerajaan Demak.</p>
                                 <div class="col-lg-12 mb-3">
-                                            <img src="images/16.JPEG" class="scrollspy-example-item-image img-fluid" alt="">
+                                            <img src="images/16.jpg" class="scrollspy-example-item-image img-fluid" alt="">
                                         </div>
                             </div>
                         </div>
@@ -282,7 +282,7 @@ https://templatemo.com/tm-588-ebook-landing
                                     <p>Sejarah Masjid Demak yang Dibangun pada Masa Pemerintahan ...
                                       Dalam proses pembangunannya, Masjid Demak didesain oleh seorang arsitek yang ahli dalam bidang arsitektur Islam. Bangunan masjid ini memiliki ciri khas arsitektur Jawa, seperti bentuk atap yang menjulang tinggi dan ukiran-ukiran yang indah di bagian atap dan dinding masjid .</p>
                                     <div class="col-lg-12 mb-3">
-                                            <img src="images/18.JPEG" class="scrollspy-example-item-image img-fluid" alt="">
+                                            <img src="images/18.jpg" class="scrollspy-example-item-image img-fluid" alt="">
                                         </div>
                                     <p>Dalam proses pembangunannya, Masjid Demak didesain oleh seorang arsitek yang ahli dalam bidang arsitektur Islam. Bangunan masjid ini memiliki ciri khas arsitektur Jawa, seperti bentuk atap yang menjulang tinggi dan ukiran-ukiran yang indah di bagian atap dan dinding masjid.</p>
                                     <p>.</p>
