--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ https://templatemo.com/tm-588-ebook-landing
                                 <h6>Masjid Demak Bercorak apa</h6>
                                 <p>Masjid ini menjadi tempat agama Islam diajarkan dan menjadi tempat Walisongo berkumpul untuk menyebarkan agama Islam. Merujuk buku berjudul Kota Demak sebagai Bandar Dagang di Jalur Sutra Kemdikbud, Masjid Agung Demak merupakan salah satu peninggalan Kerajaan Demak.</p>
                                 <div class="col-lg-12 mb-3">
-                                            <img src="images/16.jpg" class="scrollspy-example-item-image img-fluid" alt="">
+                                            <img src="images/16.jpeg" class="scrollspy-example-item-image img-fluid" alt="">
                                         </div>
                             </div>
                         </div>
